prod_snapshot_2015-09-24_1030/objects/OnBoardFormModel__c.object
<CustomObject>
    <fields>
        <fullName>SA_Campaign_Goal2__c</fullName>
        <label>Second Campaign Goal</label>
        <picklist>
            <controllingField>Social_Ads_Package__c</controllingField>
            <picklistValues>
                <fullName>Page Likes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Store Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Responses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Conversions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Installs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Engagement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Campaign_Goal__c</fullName>
        <label>Campaign Goal</label>
        <picklist>
            <controllingField>Social_Ads_Package__c</controllingField>
            <picklistValues>
                <fullName>Page Likes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Store Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Responses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Conversions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Installs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Engagement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Copy_Theme_Ideas__c</fullName>
        <label>Copy Theme/Ideas</label>
        <picklist>
            <picklistValues>
                <fullName>Fun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Current_Facebook_Page_URL__c</fullName>
        <label>Current Facebook Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SA_Manager_Level_Admin_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Client understands they are required to grant Manager Level Admin Access to gannettlocalmaster@gmail.com when requested (instructions provided).</inlineHelpText>
        <label>Manager Level Admin Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_Target_Demographics_Age__c</fullName>
        <label>Target Demographics - Age</label>
        <picklist>
            <picklistValues>
                <fullName>18 - 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - 34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 - 44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 - 54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55+</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SA_Target_Demographics_Gender__c</fullName>
        <label>Target Demographics - Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SA_Target_Geographical_Location__c</fullName>
        <label>Target Geographical Location</label>
        <picklist>
            <picklistValues>
                <fullName>Radius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Target_Radius__c</fullName>
        <label>Target Radius</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Target_State__c</fullName>
        <description>Social Advertising target state</description>
        <label>SA Target State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEO_Budget__c</fullName>
        <label>SEO Budget</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEO_Google_Analytics_Admin_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I confirm that the client has granted admin access to go.digitalmarketingseo2@gmail.com.</description>
        <label>SEO Google Analytics Admin Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEO_Google_Analytics_Installed__c</fullName>
        <label>Do you have Google Analytics installed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEO_Package__c</fullName>
        <label>SEO Package</label>
        <picklist>
            <picklistValues>
                <fullName>Community SEO 5 Keywords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community SEO 10 Keywords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community SEO 15 Keywords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro SEO 5 Keywords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro SEO 10 Keywords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro SEO 15 Keywords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National SEO 5 Keywords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National SEO 10 Keywords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National SEO 15 Keywords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National/Custom Quote SEO Package</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saturday_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Saturday closed all day</description>
        <label>Saturday Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saturday_End_Hour__c</fullName>
        <description>Saturday end hour</description>
        <label>Saturday End Hour</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saturday_End_Min__c</fullName>
        <description>Saturday end min</description>
        <label>Saturday End Min</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saturday_End_Time__c</fullName>
        <formula>TEXT( Saturday_End_Hour__c )&amp;&apos;:&apos;&amp; TEXT( Saturday_End_Min__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saturday End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_Start_Hour__c</fullName>
        <description>Saturday start hour</description>
        <label>Saturday Start Hour</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saturday_Start_Min__c</fullName>
        <description>Saturday start min</description>
        <label>Saturday Start Min</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saturday_Start_Time__c</fullName>
        <formula>TEXT( Saturday_Start_Hour__c )&amp;&apos;:&apos;&amp; TEXT( Saturday_Start_Min__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saturday Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Email_Address__c</fullName>
        <label>Second Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seed_List_1__c</fullName>
        <description>Who will receive the blast for verification?</description>
        <inlineHelpText>Who will receive the blast for verification?</inlineHelpText>
        <label>Seed List 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seed_List_2__c</fullName>
        <description>Who will receive the blast for verification?</description>
        <inlineHelpText>Who will receive the blast for verification?</inlineHelpText>
        <label>Seed List 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seed_List_3__c</fullName>
        <description>Who will receive the blast for verification?</description>
        <inlineHelpText>Who will receive the blast for verification?</inlineHelpText>
        <label>Seed List 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Select_if_G_O_Outside_Direct_Rep__c</fullName>
        <label>Select if G/O Outside Direct Rep</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellType_LeadCapPage__c</fullName>
        <label>Lead Capture Sell Type</label>
        <picklist>
            <picklistValues>
                <fullName>NewSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DownSell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellType_Maps__c</fullName>
        <label>Maps &amp; Rep Sell Type</label>
        <picklist>
            <picklistValues>
                <fullName>NewSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DownSell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellType_PPC__c</fullName>
        <label>PPC Sell Type</label>
        <picklist>
            <picklistValues>
                <fullName>NewSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DownSell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellType_SEO__c</fullName>
        <label>SEO Sell Type</label>
        <picklist>
            <picklistValues>
                <fullName>NewSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DownSell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellType_SocialAds__c</fullName>
        <label>Social Ads Sell Type</label>
        <picklist>
            <picklistValues>
                <fullName>NewSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DownSell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellType_SocialMediaMgmt__c</fullName>
        <label>Social Media Mgmt Sell Type</label>
        <picklist>
            <picklistValues>
                <fullName>NewSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DownSell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellType_TargetedEmail__c</fullName>
        <label>Targeted Email Sell Type</label>
        <picklist>
            <picklistValues>
                <fullName>NewSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DownSell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellType_Websites__c</fullName>
        <label>Websites Sell Type</label>
        <picklist>
            <picklistValues>
                <fullName>NewSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DownSell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SocialAds_Spend_Budget__c</fullName>
        <label>Social Ads Media Spend</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SocialMediaMgmt_Spend_Budget__c</fullName>
        <label>Reach Media Spend</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Social_Ads_Budget_Month__c</fullName>
        <label>Social Ads Budget/Month</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Social_Ads_Option__c</fullName>
        <label>Social Ads Option</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook Ads</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Ads_Package__c</fullName>
        <label>Social Ads Package</label>
        <picklist>
            <picklistValues>
                <fullName>Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Advertising__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Advertising</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Budget__c</fullName>
        <label>Social Budget</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Social_Media_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Media Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Option__c</fullName>
        <label>Social Option</label>
        <picklist>
            <picklistValues>
                <fullName>Social Mgmt - Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Mgmt - Engage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Mgmt - Expand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Mgmt - Reach Ad Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Weekend Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Social Package</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Offers__c</fullName>
        <label>Special Offers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <description>In relation to &apos;targeted email blast&apos;</description>
        <label>Subject Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sunday closed all day</description>
        <label>Sunday Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunday_End_Hour__c</fullName>
        <description>Sunday end hour</description>
        <label>Sunday End Hour</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sunday_End_Min__c</fullName>
        <description>Sunday end min</description>
        <label>Sunday End Min</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>